# Dashboard

./: .gitignore  .gitmodules  CMakeLists.txt  Constants.qml  Main.qml  QFRCDashboard.desktop  QFRCDashboard.manifest  QFRCDashboard.manifest.in  QFRCDashboard.rc  QFRCDashboard.rc.in  README.md  accents.json  accents.qrc  build.gradle  custom-widgets.md  fields.qrc  icons.qrc  main.cpp  prim.patch  todo.md
.github/patches/: Protobuf-Fix.patch
.github/workflows/: build.yml  cmake-multi-platform.yml  trigger_builds.yml  trigger_release.yml
.wpilib/: wpilib_preferences.json
build-tests-Desktop-Debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-tests-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-tests-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-tests-Desktop-Debug/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-tests-Desktop-Debug/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-tests-Qt_6_6_0_qt6-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  test.json
build-tests-Qt_6_6_0_qt6-Debug/.qt/: QtDeploySupport.cmake
build-tests-Qt_6_6_0_qt6-Debug/.qtc_clangd/: compile_commands.json
build-tests-Qt_6_6_0_qt6-Debug/SaveLoad_autogen/: deps
build-tests-Qt_6_6_0_qt6-Debug/WidgetDeletion_autogen/: deps
build-tests-Qt_6_6_0_qt6-Debug/WidgetUpdate_autogen/: deps  moc_predefs.h
build-tests-Qt_6_6_0_qt6-Debug/lib/: CTestTestfile.cmake  cmake_install.cmake
buildconfig/: BuildConfig.cpp.in  BuildConfig.h  CMakeLists.txt
cmake/: GetGitRevisionDescription.cmake
dialogs/: AboutDialog.qml  AccentEditor.qml  AnimatedDialog.qml  AppearanceComboBox.qml  AppearanceTab.qml  CameraList.qml  NotificationPopup.qml  ServerDialog.qml  SettingsDialog.qml  SettingsTabButton.qml  TabNameDialog.qml  TabSizeDialog.qml  TopicView.qml  WidgetConfig.qml
dialogs/accent/: AccentDisplay.qml  AccentEditor.qml
dialogs/remote/: RemoteLayout.qml  RemoteLayoutsDialog.qml
dialogs/settings/: AppearanceComboBox.qml  AppearanceTab.qml  MiscTab.qml  ServerTab.qml  SettingsDialog.qml  SettingsTabButton.qml
dialogs/tab/: TabCloseDialog.qml  TabDialog.qml  TabNameDialog.qml
include/: Clipboard.h  Constants.h  DirectionFlags.h  Flags.h  Globals.h  MainWindow.h  MaskedMouseArea.h  MetaObjectHelper.h  NotificationHelper.h  PlatformHelper.h  RobotDiagnostics.h  SettingsManager.h  TitleManager.h
include/dialogs/: CameraSelectionDialog.h  NTSettingsDialog.h  NewBooleanCheckboxDialog.h  NewBooleanDisplayDialog.h  NewCameraViewDialog.h  NewDoubleDialDialog.h  NewDoubleDisplayDialog.h  NewEnumWidgetDialog.h  NewStringChooserDialog.h  NewStringDisplayDialog.h  NewWidgetDialog.h  NewWidgetTreeDialog.h  PreferencesDialog.h  ResizeDialog.h  TabMaxSizeDialog.h  WidgetDialogGenerator.h
include/helpers/: NotificationHelper.h
include/managers/: ConnManager.h  LogManager.h  SettingsManager.h
include/misc/: BetterDial.h  FieldImage.h  NewWidgetListDialog.h  NewWidgetTreeDialog.h  ResizeDialog.h  ShapedFrame.h  WidgetDialogGenerator.h
include/models/: AccentsListModel.h  CameraListModel.h  MapModel.h  RemoteLayoutModel.h  TabListModel.h  TabWidgetsModel.h  TopicListModel.h
include/stores/: CameraStore.h  FilterStore.h  TopicStore.h  TypeStore.h
include/widgets/: BaseWidget.h  BooleanCheckboxWidget.h  BooleanDisplayWidget.h  CameraViewWidget.h  TabWidget.h  (+14 more)
items/: AccentDisplay.qml  GridHandler.qml  MainScreen.qml  Tab.qml  TopicView.qml
java/: QFRCLib.java
lib/: CMakeLists.txt  fields.qrc  genicons.sh
lib/buildconfig/: BuildConfig.h
lib/include/: Constants.h  Globals.h  MainWindow.h
lib/include/dialogs/: NTSettingsDialog.h  NewWidgetTreeDialog.h  PreferencesDialog.h  TabMaxSizeDialog.h  WidgetDialogGenerator.h
lib/include/misc/: BetterDial.h  ChartView.h  FieldImage.h  GridLineWidget.h  SwerveTrain.h
lib/include/stores/: FilterStore.h  TopicStore.h  TypeStore.h
lib/include/widgets/: BaseWidget.h  BooleanCheckboxWidget.h  BooleanDisplayWidget.h  CameraViewWidget.h  CommandWidget.h  DoubleDialWidget.h  DoubleDisplayWidget.h  EnumWidget.h  FMSInfoWidget.h  FieldWidget.h  GraphWidget.h  IntegerDialWidget.h  IntegerDisplayWidget.h  StringChooserWidget.h  StringDisplayWidget.h  SwerveWidget.h  TabWidget.h  TextWidget.h
lib/src/: Globals.cpp  MainWindow.cpp
lib/src/dialogs/: CameraSelectionDialog.cpp  NTSettingsDialog.cpp  NewWidgetTreeDialog.cpp  TabMaxSizeDialog.cpp  WidgetDialogGenerator.cpp
lib/src/misc/: BetterDial.cpp  ChartView.cpp  FieldImage.cpp  ShapedFrame.cpp  SwerveTrain.cpp
lib/src/stores/: FilterStore.cpp  TopicStore.cpp  TypeStore.cpp
lib/src/widgets/: BaseWidget.cpp  BooleanCheckboxWidget.cpp  BooleanDisplayWidget.cpp  CameraViewWidget.cpp  CommandWidget.cpp  DoubleDialWidget.cpp  DoubleDisplayWidget.cpp  EnumWidget.cpp  FMSInfoWidget.cpp  FieldWidget.cpp  GraphWidget.cpp  IntegerDialWidget.cpp  IntegerDisplayWidget.cpp  SendableFieldWidget.cpp  StringChooserWidget.cpp  StringDisplayWidget.cpp  SwerveWidget.cpp  TabWidget.cpp  TextWidget.cpp
lib/theme/qrc/dark/: stylesheet.qss
lib/theme/qrc/dark-purple/: stylesheet.qss
lib/theme/qrc/light/: stylesheet.qss
lib/theme/qrc/light-purple/: stylesheet.qss
lib/ui/: MainWindow.ui  NTSettingsDialog.ui  NewWidgetTreeDialog.ui  WidgetDialogGenerator.ui
program_info/: CMakeLists.txt  QFRCDashboard.desktop.in  QFRCDashboard.icns  QFRCDashboard.manifest.in  QFRCDashboard.rc.in  genicons.sh  win_install.nsi.in
qml/: Main.qml
src/: Clipboard.cpp  ConnManager.cpp  Constants.cpp  Globals.cpp  MainWindow.cpp  MaskedMouseArea.cpp  PlatformHelper.cpp  RobotDiagnostics.cpp  SettingsManager.cpp  TitleManager.cpp  TopicStore.cpp  main.cpp
tests/: CMakeLists.txt  test.json  tst_delete.cpp  tst_saveload.cpp  tst_update.cpp
ui/: CameraSelectionDialog.ui  MainWindow.ui  NTSettingsDialog.ui  PreferencesDialog.ui  TabMaxSizeDialog.ui  WidgetDialogGenerator.ui
widgets/: BaseConfigDialog.qml  BaseWidget.qml  DoubleSpinBox.qml  IntWidget.qml  ResizeAnchor.qml  TextWidget.qml
(+1651 files in other folders)
